Add prime checker

--- a/TODO/ToDoList.html
+++ b/TODO/ToDoList.html
@@ -81,12 +81,13 @@
 			}
 
 			newB1.onclick = function() {
-				console.log(newB1)
+				/*var lol = ul.length
+				console.log(lol)*/
 			}
-			newB2.onclick = function() {
-				
-			}
-			
+			newB2.addEventListener("click", function(){
+				var lol = ul.length
+				console.log(lol)
+			})
 			newB3.onclick = function() {	
 			}
 			input.addEventListener("keypress",function_name)
